# tidy-models

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
src/tidy_models/: __init__.py  model_identifier.py  multicuda.py
src/tidy_models/databases/: __init__.py
src/tidy_models/databases/pandas/: core.py
src/tidy_models/utils/: __init__.py  collapse_splits.py  identify_hypers.py  select_hypers.py
tests/: test_model_identifier.py  test_multicuda.py
tidy_models/: __init__.py  model_identifier.py
tidy_models/databases/: __init__.py
tidy_models/databases/pandas/: core.py
