[metadata]
name = tidy_models
description = Boilerplate for keeping model results tidy.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
keywords = machine learning, models, organization
url = https://github.com/roads/tidy-models
author = Brett D. Roads
author_email = brett.roads@gmail.com
license = Apache Licence 2.0
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
project_urls =
    Documentation = https://github.com/roads/tidy-models
    Source = https://github.com/roads/tidy-models
    Tracker = https://github.com/roads/tidy-models/issues

[options]
package_dir =
    = src
packages = find:
include_package_data = True
install_requires =
    pandas >= 2.0, < 3.0
python_requires = >=3.5, <3.10
setup_requires = 
    setuptools_scm

[options.packages.find]
where = src

[aliases]
test=pytest

[options.extras_require]
test =
    pytest >= 6.2.4
    pytest-cov
    flake8
    pylint
doc =
    sphinx-rtd-theme == 1.0.0
    sphinx-last-updated-by-git
    myst-nb
    sphinxcontrib-bibtex
